demo validates and set up association

--- a/book_shelf/test/fixtures/comments.yml
+++ b/book_shelf/test/fixtures/comments.yml
@@ -1,18 +1,12 @@
 # == Schema Information
 #
-# Table name: users
+# Table name: comments
 #
 #  id         :integer          not null, primary key
-#  user_name  :string(255)
-#  password   :string(255)
-#  email      :string(255)
-#  name       :string(255)
-#  gender     :integer
-#  birthday   :datetime
-#  role       :integer
-#  avatar     :string(255)
-#  provider   :string(255)
-#  uid        :string(255)
+#  content    :text(65535)
+#  image      :string(255)
+#  user_id    :integer
+#  rating     :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
