--- a/book_shelf/test/fixtures/books.yml
+++ b/book_shelf/test/fixtures/books.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: books
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  author     :string(255)
+#  title      :string(255)
+#  isn        :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
