--- a/book_shelf/Gemfile
+++ b/book_shelf/Gemfile
@@ -8,7 +8,7 @@ end
 gem 'carrierwave', '~> 0.10.0'
 gem 'mini_magick', '~> 4.3'
 gem 'pry-rails'
-
+gem 'bcrypt'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.3'
 # Use sqlite3 as the database for Active Record
@@ -44,6 +44,7 @@ end
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
+  gem 'awesome_print'
   gem 'web-console', '>= 3.3.0'
   gem 'listen', '~> 3.0.5'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
@@ -51,6 +52,8 @@ group :development do
   gem 'spring-watcher-listen', '~> 2.0.0'
   gem 'faker'
   gem 'annotate'
+  gem 'rubocop', require: false
+  gem 'tabs2spaces'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
